--- a/src/App.css
+++ b/src/App.css
@@ -70,13 +70,21 @@
 
 .App-body {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  background-color: grey;
+  justify-content: space-around;
   padding: 20px;
   width: 100%;
 }
-
+.info-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+.product-description {
+  max-width: 550px; /* Limit the width of text */
+}
 .App {
   display: flex;
   justify-content: center;
