--- a/src/App.css
+++ b/src/App.css
@@ -105,3 +105,35 @@
 .fas.fa-bars {
   color: white; /* Ensures icon is visible against the dark header */
 }
+
+/* Media Queries for Mobile Optimization */
+@media (max-width: 768px) {
+  .App-body {
+    flex-direction: column; /* Stack elements vertically on mobile */
+  }
+
+  .product-description, .info-section {
+    align-items: center;
+    text-align: center;
+  }
+
+  .header-content, .right-content {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 5px;
+  }
+
+  .login-text {
+    margin-right: 0; /* Remove margin for mobile layout */
+    margin-top: 10px; /* Add some spacing */
+  }
+
+  .menu-icon {
+    padding-right: 0; /* Adjust padding for smaller screens */
+  }
+
+  .company-name {
+    margin-bottom: 10px; /* Add space below the company name on mobile */
+  }
+}
