--- a/src/App.css
+++ b/src/App.css
@@ -118,15 +118,15 @@
   }
 
   .header-content, .right-content {
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     text-align: center;
     padding: 5px;
   }
 
   .login-text {
-    margin-right: 0; /* Remove margin for mobile layout */
-    margin-top: 10px; /* Add some spacing */
+    margin-right: 10px; /* Remove margin for mobile layout */
+    margin-top: 0px; /* Add some spacing */
   }
 
   .menu-icon {
